log
Thu 20 Apr 2023 12:19:26 AM UTC: 
 tests:  1|8
total_score: 0/70
dd6429f
Thu 20 Apr 2023 12:25:44 AM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
6da245d
Thu 20 Apr 2023 12:25:51 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
b8b9de9
Thu 20 Apr 2023 12:26:09 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
a1e7743
Thu 20 Apr 2023 12:40:56 AM UTC: 
 treemap.c | 24 ++++++++++++++++++++++--
 1 file changed, 22 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
84adecf
Thu 20 Apr 2023 12:54:04 AM UTC: 
 treemap.c | 41 +++++++++++++++++++++++++++++++++++++----
 1 file changed, 37 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:80:3: error: expected expression before ‘}’ token
   80 |   }
      |   ^
Compilation failed
f7893de
Thu 20 Apr 2023 12:54:14 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
daaf3b3
Thu 20 Apr 2023 12:54:46 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
4702533
Thu 20 Apr 2023 12:57:00 AM UTC: 
 treemap.c | 32 +++++++++++++++++++++-----------
 1 file changed, 21 insertions(+), 11 deletions(-)
In file included from test.c:4:
treemap.c:96:1: error: expected identifier or ‘(’ before ‘}’ token
   96 | }
      | ^
Compilation failed
8f9753c
Thu 20 Apr 2023 12:57:08 AM UTC: 
 treemap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  13|5
total_score: 25/70
e004936
Thu 20 Apr 2023 12:59:12 AM UTC: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  13|5
total_score: 25/70
6d0b4d1
Thu 20 Apr 2023 12:59:51 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
87f3184
Thu 20 Apr 2023 01:03:18 AM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  17|3
total_score: 30/70
74aa804
Thu 20 Apr 2023 07:58:45 PM UTC: 
 treemap.c | 46 ++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 44 insertions(+), 2 deletions(-)
 tests:  0|0
a1b3268
Thu 20 Apr 2023 08:01:00 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:126:20: error: ‘hijo’ may be used uninitialized [-Werror=maybe-uninitialized]
  126 |       hijo->parent = NULL; // no existe padre
      |                    ^
cc1: all warnings being treated as errors
Compilation failed
f3a3853
Thu 20 Apr 2023 08:01:16 PM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|0
1eb0a23
Thu 20 Apr 2023 08:01:49 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
0f31da5
